[tool.poetry]
name = "rds-dashboard"
version = "0.1.0"
description = "Proof of concept dashboard for the status of MapAction Rolling Data Scrambles"
authors = [
    "Felix Fennell <ffennell@mapaction.org>",
    "Daniel Soares <dsoares@mapaction.org>"
]

[tool.poetry.dependencies]
python = "^3.9.1"
pycountry = "^20.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
