[tool.poetry]
name = "mapaction-rds-dashboard"
version = "0.2.0"
description = "Proof of concept dashboard for the status of MapAction Rolling Data Scrambles"
authors = [
    "Felix Fennell <ffennell@mapaction.org>",
    "Daniel Soares <dsoares@mapaction.org>"
]

[tool.poetry.dependencies]
python = "^3.7.1"
pycountry = "^20.7.3"
pandas = "^1.2.2"
oauth2client = "^4.1.3"
df2gspread = "^1.0.4"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
