[tool.poetry]
name = "mapy-rds-dashboard"
version = "0.3.0-alpha.0"
description = "Proof of concept dashboard for the status of MapAction Rolling Data Scrambles"
license = "MIT"
authors = [
    "Felix Fennell <ffennell@mapaction.org>",
    "Daniel Soares <dsoares@mapaction.org>"
]
readme = "README.md"
homepage = "https://github.com/mapaction/rolling-data-scramble-dashboard-poc"
repository = "https://github.com/mapaction/rolling-data-scramble-dashboard-poc.git"
documentation = "https://github.com/mapaction/rolling-data-scramble-dashboard-poc"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
df2gspread = "^1.0.4"
importlib-metadata = {version = "^3.7.0", python = "<3.8"}
oauth2client = "^4.1.3"
pandas = "^1.2.2"
pycountry = "^20.7.3"
python = "^3.7.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = {version = "^5.4.0", extras = ["toml"]}
darglint = "^1.7.0"
flake8 = "^3.8.4"
flake8-annotations = "^2.5.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
mypy = "^0.812"
safety = "^1.10.3"
typeguard = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update-dashboard = "mapaction_rds_dashboard.app:run"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mapaction_rds_dashboard"]

[tool.coverage.report]
show_missing = true
fail_under = 100
